--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -109,3 +109,16 @@ a:focus {
     margin: 0px auto;
     text-align: center;
 }
+
+.footer {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom: 4px;
+    font-size: 12px;
+}
+
+.footer a:hover {
+    background-color: transparent;
+    color: #C4FF69;
+}
